[package]
name = "rust_query_mysql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
pedantic = "deny"
missing-const-for-fn = "deny"
unwrap-used = "deny"
unused-enumerate-index = "deny"
as-underscore = "deny"
get-unwrap = "deny"
str-to-string = "deny"
too-many-lines = "deny"
todo = "warn"

[dependencies]
rust_query_macro_mysql = { path = "../macro_mysql" }
const_format = "=0.2.32"
mysql = "=24.0.0"
