[package]
name = "rust_query_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
pedantic = "deny"
missing-const-for-fn = "deny"
unwrap-used = "deny"
unused-enumerate-index = "deny"
as-underscore = "deny"
get-unwrap = "deny"
str-to-string = "deny"
too-many-lines = "deny"
todo = "warn"

[lib]
proc-macro = true

[dependencies]
syn = "=2.0.64"
quote = "=1.0.36"
proc-macro2 = "=1.0.82"
const_format = "=0.2.32"
