[package]
name = "rust_query_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
pedantic = "deny"
missing-const-for-fn = "deny"
unused-enumerate-index = "deny"
as-underscore = "deny"
str-to-string = "deny"
too-many-lines = "deny"
todo = "warn"
get-unwrap = "warn"
unwrap-used = "warn"
unwrap_in_result = "warn"
map_unwrap_or = "warn"

[lib]
proc-macro = true

[dependencies]
rust_query_lib_macro = { path = "../lib_macro" }
syn = "=2.0.66"
quote = "=1.0.36"
proc-macro2 = "=1.0.83"
const_format = "=0.2.32"
