[package]
name = "rust_query_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
pedantic = "deny"
missing-const-for-fn = "deny"
unused-enumerate-index = "deny"
as-underscore = "deny"
str-to-string = "deny"
too-many-lines = "deny"
todo = "warn"
get-unwrap = "warn"
unwrap-used = "warn"
unwrap_in_result = "warn"
map_unwrap_or = "warn"

[dependencies]
rust_query = { path = "../lib" }
rust_query_mysql = { path = "../lib_mysql" }
mysql = "=25.0.1"
dotenv = "=0.15.0"
once_cell = "1.19.0"
